
syntax = "proto3";

//import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

option csharp_namespace = "game";

message PlayerData{
    int64 regionIndex = 1;
    string name = 2;
    int64 stage = 3;
}
